--- a/ping pang/Base.lproj/Main.storyboard
+++ b/ping pang/Base.lproj/Main.storyboard
@@ -62,6 +62,7 @@
                                 <rect key="frame" x="67" y="476" width="67" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="+"/>
                                 <connections>
                                     <action selector="add:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EoF-i4-mWa"/>
@@ -71,6 +72,7 @@
                                 <rect key="frame" x="241" y="476" width="67" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="+"/>
                                 <connections>
                                     <action selector="rightadd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Y8m-T9-S95"/>
@@ -99,7 +101,7 @@
         <!--View Controller-->
         <scene sceneID="NWc-kN-TpQ">
             <objects>
-                <viewController id="sTp-ri-uQg" sceneMemberID="viewController">
+                <viewController id="sTp-ri-uQg" customClass="ViewController" customModule="ping_pang" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="J9k-77-1IG"/>
                         <viewControllerLayoutGuide type="bottom" id="crV-C9-z1T"/>
@@ -142,6 +144,7 @@
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="AC"/>
                                 <connections>
+                                    <action selector="AC2:" destination="sTp-ri-uQg" eventType="touchUpInside" id="iOJ-yk-dyE"/>
                                     <action selector="AC:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Sgz-eJ-m8t"/>
                                 </connections>
                             </button>
@@ -149,18 +152,20 @@
                                 <rect key="frame" x="68" y="487" width="67" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="+"/>
                                 <connections>
-                                    <action selector="add:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ryv-he-Dka"/>
+                                    <action selector="add2:" destination="sTp-ri-uQg" eventType="touchUpInside" id="2k2-Ye-Wuh"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QpZ-fN-uAt">
                                 <rect key="frame" x="242" y="487" width="67" height="28"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="+"/>
                                 <connections>
-                                    <action selector="rightadd:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KEu-TB-kUd"/>
+                                    <action selector="rightadd2:" destination="sTp-ri-uQg" eventType="touchUpInside" id="Upc-07-JB7"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aWU-rN-BC4">
@@ -174,10 +179,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="number1" destination="fSU-Qf-skF" id="rOz-q6-DPh"/>
+                        <outlet property="number2" destination="1x5-Q4-CFK" id="YtR-Hb-zQW"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2A1-sn-E7E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1076" y="34"/>
+            <point key="canvasLocation" x="761" y="-72"/>
         </scene>
     </scenes>
     <resources>
